[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "fastmcp>=3.2.4",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
]
